--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,10 +3,11 @@
   %head
     %meta{:charset => "utf-8"}/
     %meta{:content => "NOODP", :name => "ROBOTS"}/
-    %meta{:content => "initial-scale=1", :name => "viewport"}/
-      %title= title
-      = stylesheet_link_tag :application, media: "all"
-      = csrf_meta_tags
+    %meta{:content => "initial-scale=1", :name => "viewport"}
+    %title
+      = title
+    = stylesheet_link_tag :application, media: "all"
+    = csrf_meta_tags
   %body{:class => body_class}
     = render "flashes"
     = yield
