--- a/app/views/offer_wall/form.html.haml
+++ b/app/views/offer_wall/form.html.haml
@@ -1,7 +1,8 @@
 .form-wrapper
   = simple_form_for @form, url: list_path do |f|
-    %h1 Fyber Coding Challenge
-    %p By Kristian Hildebrandt
+    .intro
+      %h1 Fyber Coding Challenge
+      %p By Kristian Hildebrandt
 
     .flex-boxes
       .flex-box.flex-box-big
